<resources>
    <string name="app_name">Studa</string>

    <string name="lesson">Lesson</string>
    <string name="teacher">Teacher</string>
    <string name="task">Task</string>

    <string name="add_plus_sign">+</string>

    <!-- Add item bottom sheet strings -->
    <string name="add_item">Add new</string>
    <string name="add_button_description">Add button</string>
    <string name="add_teacher">Add Teacher</string>

    <!-- Main navigation bottom sheet strings -->
    <string name="assignments">Assignments</string>
    <string name="today">Today</string>
    <string name="details">Details</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="optional">Optional</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Welcome screen strings -->
    <string name="welcome_label">Welcome to Studa</string>
    <string name="welcome_text_1">The one place to keep all your studies up to date. Track your lessons, check on your homework and keep in touch with your teachers with ease</string>
    <string name="welcome_text_2">To continue using app please</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="continue_online">Continue using app offline</string>

    <!-- Login screen strings -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="bottom_label_login">Don’t have an account?\nConsider creating a new one</string>
    
    <!-- Register screen strings -->
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create account</string>
    <string name="bottom_label_register">Already have an account?</string>
</resources>