<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="16dp"
    android:paddingHorizontal="24dp"
    android:transitionName="checkoutTransition">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/colorTextDark"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorLightGray"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:inputType="textNoSuggestions"
        android:background="@drawable/round_button_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/colorTextDark"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorLightGray"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:hint="@string/optional"
        android:inputType="textNoSuggestions"
        android:background="@drawable/round_button_gray"
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_button_accent"
        android:text="@string/add_teacher"
        android:elevation="8dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:backgroundTint="@null"/>

</LinearLayout>