<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/arrow_back_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorTextDark" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="21dp"
        android:src="@mipmap/studa_logo_title_100dp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        android:paddingHorizontal="34dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorTextDark"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/round_button_gray"
            android:inputType="textNoSuggestions"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:textColor="@color/colorLightGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/round_button_gray"
            android:hint="@string/optional"
            android:inputType="textNoSuggestions"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:textColor="@color/colorLightGray"
            tools:ignore="RtlSymmetry" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@drawable/round_button_accent"
            android:elevation="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="34dp"
        android:paddingBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textColor="@color/colorTextDark"
            android:text="@string/bottom_label"
            android:textSize="18sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@drawable/round_button_accent"
            android:elevation="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@null" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>